--- a/modules/02/02-langsmith.ipynb
+++ b/modules/02/02-langsmith.ipynb
@@ -203,7 +203,7 @@
         "After this we should see that a new project (`aurelioai-langchain-course-langsmith-openai`) has been created in the LangSmith UI. Inside that project, we should see the trace from our LLM call:\n",
         "\n",
         "\n",
-        "![LangSmith LLM Trace](https://github.com/aurelio-labs/langchain-course/blob/main/assets/langsmith-ui-01.jpg?raw=1)"
+        "![LangSmith LLM Trace](https://github.com/abhisharma250103-ai/LangchainLearning/blob/master/modules/02/langsmith-ui-learning.png?raw=1)"
       ]
     },
     {
